src/parser.old.cpp
#include "parser.hpp"

#include <algorithm>
#include <charconv>
#include <span>
#include <string_view>

#include "ast.hpp"
#include "error_reporter.hpp"
#include "libassert/assert.hpp"
#include "tokenizer.hpp"

namespace yal {

#define try(...) \
    if (!(__VA_ARGS__)) return ast.new_node_err(prev_span())

struct Parser {
    [[nodiscard]] constexpr auto peek() const -> Token {
        return tokens[current];
    }

    [[nodiscard]] constexpr auto peek_prev() const -> Token {
        ASSERT(current > 0);
        return tokens[current - 1];
    }

    [[nodiscard]] constexpr auto peek_and_advance() -> Token {
        auto t = peek();
        advance();
        return t;
    }

    [[nodiscard]] constexpr auto check(TokenType tt) const -> bool {
        return peek().type == tt;
    }

    [[nodiscard]] constexpr auto check_kw(std::string_view kw) const -> bool {
        return peek().is_kw(source, kw);
    }

    [[nodiscard]] constexpr auto check_next(TokenType tt) const -> bool {
        if (is_at_end()) return false;

        return tokens[current + 1].type == tt;
    }

    [[nodiscard]] constexpr auto match(TokenType tt) -> bool {
        if (!check(tt)) return false;

        advance();
        return true;
    }

    [[nodiscard]] constexpr auto match_kw(std::string_view kw) -> bool {
        if (!check_kw(kw)) return false;

        advance();
        return true;
    }

    [[nodiscard]] constexpr auto match_oneof(auto... tt) -> bool {
        auto c = (check(tt) || ...);
        if (!c) return false;

        advance();
        return true;
    }

    template <typename... T>
    [[nodiscard]] constexpr auto consume(TokenType                tt,
                                         fmt::format_string<T...> fmt,
                                         T&&... args) -> bool {
        return consume_impl(tt, fmt, fmt::make_format_args(args...));
    }

    [[nodiscard]] constexpr auto consume(TokenType tt) -> bool {
        if (match(tt)) return true;

        er->report_error(span(), "expected {}, but got {}", tt, peek().type);
        advance();

        return false;
    }

    [[nodiscard]] constexpr auto consume_kw(std::string_view tt) -> bool {
        if (match_kw(tt)) return true;

        er->report_error(span(), "expected '{}', but got '{}'", tt,
                         span().str(source));
        advance();

        return false;
    }

    [[nodiscard]] constexpr auto consume_impl(TokenType        tt,
                                              fmt::string_view fmt,
                                              fmt::format_args args) -> bool {
        if (match(tt)) return true;

        er->report_error(span(), "expected {}, but got {}", tt, peek().type);
        er->vreport_note(span(), fmt, args);
        advance();

        return false;
    }

    [[nodiscard]] constexpr auto span() const -> Span { return peek().span; }
    [[nodiscard]] constexpr auto prev_span() const -> Span {
        return peek_prev().span;
    }

    [[nodiscard]] constexpr auto is_at_end() const -> bool {
        return peek().is_eof();
    }

    constexpr void advance() {
        do {
            if (!is_at_end()) current++;
        } while (peek().is_comment());
    }

    constexpr void skip_start_comments() {
        while (peek().is_comment()) current++;
    }

    // ------------------------------------------------------------------------

    auto parse_file() -> NodeHandle {
        skip_start_comments();

        std::vector<NodeHandle> children;

        Span s;

        while (!is_at_end()) {
            children.push_back(parse_top_stmt());
        }

        if (!peek().is_eof()) {
            er->report_error(span(), "expected EOF, got {}", peek().type);
        }

        if (!children.empty()) {
            auto start = ast.get(children.at(0))->span;
            auto end = ast.get(children.at(children.size() - 1))->span;
            s = start.extend(end);
        }

        return ast.new_node_with_children(NodeKind::File, s, children);
    }

    auto parse_top_stmt() -> NodeHandle {
        if (match_kw("func")) return parse_func();
        if (match_kw("extern")) return parse_extern_func();
        if (match_kw("def")) return parse_def_decl();
        if (match_kw("var")) return parse_var_decl();
        if (match_kw("import")) return parse_import();

        auto t = peek_and_advance();
        er->report_error(t.span,
                         "expected one of 'func', 'def', 'var' or 'import' at "
                         "top-level, found: {}",
                         t.type);

        return ast.new_node_err(t.span);
    }

    // func ::= "func" { ID "." } ID [ "[" generic_args "]" ] "(" func_args ")"
    // [ expr ] block ;
    auto parse_func() -> NodeHandle {
        auto s = prev_span();

        auto name = parse_func_id();

        try(consume(TokenType::Lparen));
        auto args = parse_func_args();
        try(consume(TokenType::Rparen));

        auto ret = ast.new_node_nil(prev_span());
        if (!check(TokenType::Lbrace)) {
            ret = parse_func_ret();
        }

        auto body = parse_block();

        return ast.new_node_func(NodeKind::Func, s.extend(ast.get(body)->span),
                                 name, args, ret, body);
    }

    // extern_func ::= "extern" "func" { ID "." } ID "(" func_args ")" [
    // func_ret ] ";" ;
    auto parse_extern_func() -> NodeHandle {
        auto s = prev_span();

        try(consume_kw("func"));
        try(consume(TokenType::Id));
        auto name = ast.new_node_id(s.extend(prev_span()),
                                    std::string{prev_span().str(source)});
        while (match(TokenType::Dot)) {
            try(consume(TokenType::Id));
            name =
                ast.new_node_named(NodeKind::Field, ast.get(name)->span, name,
                                   std::string{prev_span().str(source)});
        }

        try(consume(TokenType::Lparen));
        auto args = parse_func_args();
        try(consume(TokenType::Rparen));

        auto ret = ast.new_node_nil(prev_span());
        if (!check(TokenType::Semi)) {
            ret = parse_func_ret();
        }

        try(consume(TokenType::Semi));

        return ast.new_node_func(NodeKind::FuncExtern, s.extend(prev_span()),
                                 name, args, ret, {});
    }

    auto parse_func_id() -> NodeHandle {
        try(consume(TokenType::Id));
        auto s = prev_span();

        auto name =
            ast.new_node_id(prev_span(), std::string{prev_span().str(source)});

        if (check(TokenType::Dot)) {
            std::vector ids{name};
            while (match(TokenType::Dot)) {
                try(consume(TokenType::Id));

                ids.push_back(ast.new_node_id(
                    prev_span(), std::string{prev_span().str(source)}));
            }

            auto end = ast.get(ids.at(ids.size() - 1))->span;
            return ast.new_node_with_children(NodeKind::IdPack, s.extend(end),
                                              ids);
        }

        return name;
    }

    auto parse_import() -> NodeHandle {
        er->report_bug(span(), "import not implemented");
        return ast.new_node_err(span());
    }

    // ------------------------------------------------------------------------

    // stmt ::= expr ";"
    //        | return_stmt
    //        | if_stmt
    //        | while_stmt
    //        | for_stmt
    //        | switch_stmt
    //        | block
    //        | def_decl
    //        | var_decl
    //        | assign
    //        | break
    //        | defer
    //        ;
    auto parse_stmt() -> NodeHandle {
        if (check_kw("return")) return parse_return_stmt();
        if (check_kw("if")) return parse_if_stmt();
        if (match_kw("var")) return parse_var_decl();
        if (match_kw("def")) return parse_def_decl();
        if (match_kw("break")) return parse_break();
        if (match_kw("defer")) return parse_defer();

        auto expr = parse_expr();
        if (ast.get(expr)->is_lvalue() && match(TokenType::Equal)) {
            auto rhs = parse_expr();
            try(consume(TokenType::Semi));

            return ast.new_node_with_child(
                NodeKind::Assign, ast.get(expr)->span.extend(prev_span()), expr,
                rhs);
        }

        try(consume(TokenType::Semi));

        return ast.new_node_with_child(
            NodeKind::ExprStmt, ast.get(expr)->span.extend(prev_span()), expr);
    }

    // return_stmt ::= "return" [ open_expr_pack ] ";" ;
    auto parse_return_stmt() -> NodeHandle {
        auto s = span();
        try(consume_kw("return"));

        auto expr = ast.new_node_nil(prev_span());
        if (!check(TokenType::Semi)) expr = parse_open_expr_pack();

        try(consume(TokenType::Semi));

        return ast.new_node_with_child(NodeKind::ReturnStmt,
                                       s.extend(prev_span()), expr);
    }

    // if_stmt ::= "if" expr block [ "else" expr ]
    //           | "if" var_decl expr block
    //           ;
    auto parse_if_stmt() -> NodeHandle {
        auto s = span();
        try(consume_kw("if"));

        if (match_kw("var")) {
            auto decl = parse_var_decl();
            auto cond = parse_expr();
            auto wt = parse_block();

            if (match_kw("else")) {
                auto wf = parse_block();

                return ast.new_node_if(NodeKind::IfStmtWithDeclAndElse,
                                       s.extend(ast.get(wt)->span),
                                       {.decl = decl,
                                        .cond = cond,
                                        .when_true = wt,
                                        .when_false = wf});
            }

            return ast.new_node_if(NodeKind::IfStmtWithDecl,
                                   s.extend(ast.get(wt)->span),
                                   {.decl = decl,
                                    .cond = cond,
                                    .when_true = wt,
                                    .when_false = {}});
        }

        auto cond = parse_expr();
        auto wt = parse_block();

        if (match_kw("else")) {
            auto wf = parse_block();

            return ast.new_node_if(
                NodeKind::IfStmtWithElse, s.extend(ast.get(wt)->span),
                {.decl = {}, .cond = cond, .when_true = wt, .when_false = wf});
        }

        return ast.new_node_if(
            NodeKind::IfStmt, s.extend(ast.get(wt)->span),
            {.decl = {}, .cond = cond, .when_true = wt, .when_false = {}});
    }

    // block ::= "{" { stmt } "}" ;
    auto parse_block() -> NodeHandle {
        auto s = span();

        std::vector<NodeHandle> children;

        try(consume(TokenType::Lbrace));

        while (!is_at_end() && !check(TokenType::Rbrace)) {
            children.push_back(parse_stmt());
        }

        try(consume(TokenType::Rbrace));

        return ast.new_node_with_children(NodeKind::Block,
                                          s.extend(prev_span()), children);
    }

    // var_decl ::= "var" id_pack [ ":" expr ] "=" expr ";"
    //            | "var" id_pack ":" expr [ "=" expr ] ";"
    //            ;
    auto parse_var_decl() -> NodeHandle {
        auto s = prev_span();
        auto ids = parse_id_pack();

        if (match(TokenType::Colon)) {
            // has type annotation
            auto type = parse_expr();

            auto init = ast.new_node_nil(span());
            if (match(TokenType::Equal)) init = parse_expr();

            try(consume(TokenType::Semi));

            auto span = s.extend(prev_span());
            return ast.new_node_decl(NodeKind::VarDecl, span, ids, type, init);
        }

        try(consume(TokenType::Equal));
        auto init = parse_expr();

        try(consume(TokenType::Semi));

        auto span = s.extend(prev_span());
        return ast.new_node_decl(NodeKind::VarDecl, span, ids,
                                 ast.new_node_nil(prev_span()), init);
    }

    // def_decl ::= "def" id_pack [ ":" expr ] "=" expr ";" ;
    auto parse_def_decl() -> NodeHandle {
        auto s = prev_span();
        auto ids = parse_id_pack();

        NodeHandle type;
        if (match(TokenType::Colon))
            type = parse_expr();
        else
            type = ast.new_node_nil(prev_span());

        try(consume(TokenType::Equal));
        auto init = parse_expr();

        try(consume(TokenType::Semi));

        auto span = s.extend(prev_span());
        return ast.new_node_decl(NodeKind::DefDecl, span, ids, type, init);
    }

    // id_pack ::= ID { "," ID } ;
    auto parse_id_pack() -> NodeHandle {
        std::vector<NodeHandle> ids;

        do {
            try(consume(TokenType::Id));
            auto id = ast.new_node_id(prev_span(),
                                      std::string{prev_span().str(source)});
            ids.push_back(id);
        } while (match(TokenType::Comma));

        auto end = ast.get(ids.at(ids.size() - 1))->span;
        auto span = ast.get(ids.at(0))->span.extend(end);

        if (ids.size() == 1) return ids.at(0);

        return ast.new_node_with_children(NodeKind::IdPack, span, ids);
    }

    auto parse_break() -> NodeHandle {
        auto s = prev_span();
        try(consume(TokenType::Semi));

        return ast.new_node_break(s.extend(prev_span()));
    }

    auto parse_defer() -> NodeHandle {
        auto s = prev_span();
        auto child = parse_stmt();

        return ast.new_node_with_child(NodeKind::Defer, s.extend(prev_span()),
                                       child);
    }

    // ------------------------------------------------------------------------

    // expr ::= logic_or ;
    auto parse_expr() -> NodeHandle { return parse_logic_or(); }

    // logic_or  ::= logic_and { "or" logic_and } ;
    auto parse_logic_or() -> NodeHandle {
        auto lhs = parse_logic_and();

        while (match_kw("or")) {
            auto rhs = parse_logic_and();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(NodeKind::LogicOr, span, lhs, rhs);
        }

        return lhs;
    }

    // logic_and ::= bin_or { "and" bin_or } ;
    auto parse_logic_and() -> NodeHandle {
        auto lhs = parse_bin_or();

        while (match_kw("and")) {
            auto rhs = parse_bin_or();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(NodeKind::LogicAnd, span, lhs, rhs);
        }

        return lhs;
    }

    // bin_or  ::= bin_xor { "|" bin_xor } ;
    auto parse_bin_or() -> NodeHandle {
        auto lhs = parse_bin_xor();

        while (match_oneof(TokenType::Pipe)) {
            auto rhs = parse_bin_xor();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(NodeKind::BinOr, span, lhs, rhs);
        }

        return lhs;
    }

    // bin_xor ::= bin_and { "^" bin_and } ;
    auto parse_bin_xor() -> NodeHandle {
        auto lhs = parse_bin_and();

        while (match_oneof(TokenType::Carrot)) {
            auto rhs = parse_bin_and();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(NodeKind::BinXor, span, lhs, rhs);
        }

        return lhs;
    }

    // bin_and ::= equality { "&" equality } ;
    auto parse_bin_and() -> NodeHandle {
        auto lhs = parse_equality();

        while (match_oneof(TokenType::Ampersand)) {
            auto rhs = parse_equality();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(NodeKind::BinAnd, span, lhs, rhs);
        }

        return lhs;
    }

    // equality ::= comparison { ( "!=" | "==" ) comparison } ;
    auto parse_equality() -> NodeHandle {
        auto lhs = parse_comparison();

        while (match_oneof(TokenType::BangEqual, TokenType::EqualEqual)) {
            NodeKind k;
            auto     t = peek_prev();
            switch (t.type) {
                case TokenType::BangEqual: k = NodeKind::NotEqual; break;
                case TokenType::EqualEqual: k = NodeKind::Equal; break;
                default: __builtin_unreachable();
            }

            auto rhs = parse_comparison();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(k, span, lhs, rhs);
        }

        return lhs;
    }

    // comparison ::= shift { ( ">" | "=>" | "<=" | "<" ) shift } ;
    auto parse_comparison() -> NodeHandle {
        auto lhs = parse_shift();

        while (match_oneof(TokenType::Greater, TokenType::GreaterEqual,
                           TokenType::LessEqual, TokenType::Less)) {
            NodeKind k;
            auto     t = peek_prev();
            switch (t.type) {
                case TokenType::Greater: k = NodeKind::Greater; break;
                case TokenType::GreaterEqual: k = NodeKind::GreaterEqual; break;
                case TokenType::Less: k = NodeKind::Smaller; break;
                case TokenType::LessEqual: k = NodeKind::SmallerEqual; break;
                default: __builtin_unreachable();
            }

            auto rhs = parse_shift();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(k, span, lhs, rhs);
        }

        return lhs;
    }

    // shift ::= term { ( "<<" | ">>" ) term } ;
    auto parse_shift() -> NodeHandle {
        auto lhs = parse_term();

        while (match_oneof(TokenType::LessLess, TokenType::GreaterGreater)) {
            NodeKind k;
            auto     t = peek_prev();
            switch (t.type) {
                case TokenType::LessLess: k = NodeKind::ShftLeft; break;
                case TokenType::GreaterGreater: k = NodeKind::ShftRight; break;
                default: __builtin_unreachable();
            }

            auto rhs = parse_term();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(k, span, lhs, rhs);
        }

        return lhs;
    }

    // term ::= factor { ( "+" | "-" ) factor } ;
    auto parse_term() -> NodeHandle {
        auto lhs = parse_factor();

        while (match_oneof(TokenType::Plus, TokenType::Minus)) {
            NodeKind k;
            auto     t = peek_prev();
            switch (t.type) {
                case TokenType::Plus: k = NodeKind::Add; break;
                case TokenType::Minus: k = NodeKind::Sub; break;
                default: __builtin_unreachable();
            }

            auto rhs = parse_factor();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(k, span, lhs, rhs);
        }

        return lhs;
    }

    // factor ::= cast { ( "*" | "/" | "%" ) cast } ;
    auto parse_factor() -> NodeHandle {
        auto lhs = parse_cast();

        while (match_oneof(TokenType::Star, TokenType::Slash,
                           TokenType::Percent)) {
            NodeKind k;
            auto     t = peek_prev();
            switch (t.type) {
                case TokenType::Star: k = NodeKind::Mul; break;
                case TokenType::Slash: k = NodeKind::Div; break;
                case TokenType::Percent: k = NodeKind::Mod; break;
                default: __builtin_unreachable();
            }

            auto rhs = parse_cast();

            auto span = ast.get(lhs)->span.extend(ast.get(rhs)->span);
            lhs = ast.new_node_with_child(k, span, lhs, rhs);
        }

        return lhs;
    }

    // cast ::= unary { "as" unary }
    //        | unary "or_else" expr
    //        | unary "or_return"
    //        ;
    auto parse_cast() -> NodeHandle {
        // TODO: unary { "as" unary }
        // TODO: unary "or_else" expr
        // TODO: unary "or_return"

        auto lhs = parse_unary();

        if (match_kw("or_else")) {
            auto rhs = parse_expr();

            return ast.new_node_with_child(
                NodeKind::OrElse, ast.get(lhs)->span.extend(ast.get(rhs)->span),
                lhs, rhs);
        }

        if (match_kw("or_return")) {
            return ast.new_node_with_child(
                NodeKind::OrReturn, ast.get(lhs)->span.extend(prev_span()),
                lhs);
        }

        while (match_kw("as")) {
            auto rhs = parse_unary();

            lhs = ast.new_node_with_child(
                NodeKind::Cast, ast.get(lhs)->span.extend(ast.get(rhs)->span),
                lhs, rhs);
        }

        return lhs;
    }

    // unary ::= ( "!" | "+" | "-" | "~" | "&" | "?" ) unary
    //         | deref
    //         ;
    auto parse_unary() -> NodeHandle {
        auto t = span();
        if (match(TokenType::Bang)) {
            auto child = parse_unary();
            return ast.new_node_with_child(
                NodeKind::LogicNot, t.extend(ast.get(child)->span), child);
        }

        if (match(TokenType::Plus)) {
            auto child = parse_unary();
            return ast.new_node_with_child(
                NodeKind::Plus, t.extend(ast.get(child)->span), child);
        }

        if (match(TokenType::Minus)) {
            auto child = parse_unary();
            return ast.new_node_with_child(
                NodeKind::Neg, t.extend(ast.get(child)->span), child);
        }

        if (match(TokenType::Tilde)) {
            auto child = parse_unary();
            return ast.new_node_with_child(
                NodeKind::BinNot, t.extend(ast.get(child)->span), child);
        }

        if (match(TokenType::Ampersand)) {
            auto child = parse_unary();
            return ast.new_node_with_child(
                NodeKind::AddrOf, t.extend(ast.get(child)->span), child);
        }

        if (match(TokenType::Question)) {
            auto child = parse_unary();
            return ast.new_node_with_child(
                NodeKind::Optional, t.extend(ast.get(child)->span), child);
        }

        return parse_deref();
    }

    // deref ::= call { ".*" call } ;
    auto parse_deref() -> NodeHandle {
        auto lhs = parse_call();

        while (match(TokenType::DotStar)) {
            lhs = ast.new_node_with_child(
                NodeKind::Deref, ast.get(lhs)->span.extend(prev_span()), lhs);
        }

        return lhs;
    }

    // call ::= field { "(" call_args ")" }      (* func call *)
    //        | field { "[" slice_or_index "]" } (* index/slicing *)
    //        ;
    auto parse_call() -> NodeHandle {
        auto lhs = parse_field();

        if (match(TokenType::Lparen)) {
            auto args = parse_call_args();
            try(consume(TokenType::Rparen));

            return ast.new_node_call(ast.get(lhs)->span.extend(prev_span()),
                                     lhs, args);
        }

        // TODO: primary { "[" slice_or_index "]" } (* index/slicing *)

        return lhs;
    }

    // field ::= primary { "." ID }
    auto parse_field() -> NodeHandle {
        auto lhs = parse_primary();

        while (match(TokenType::Dot)) {
            auto t = peek();
            try(consume(TokenType::Id));

            lhs = ast.new_node_named(NodeKind::Field,
                                     ast.get(lhs)->span.extend(t.span), lhs,
                                     std::string{t.span.str(source)});
        }

        return lhs;
    }

    // primary ::= "(" expr ")"
    //           | "." ID
    //           | expr_pack
    //           | array
    //           | pointer_type
    //           | struct_type
    //           | enum_type
    //           | number
    //           | STR
    //           | ID
    //           ;
    auto parse_primary() -> NodeHandle {
        // "(" expr ")" and expr_pack are together here
        if (match(TokenType::Lparen)) {
            auto child = parse_expr();

            if (check(TokenType::Comma)) {
                std::vector items{child};

                while (match(TokenType::Comma)) {
                    items.push_back(parse_expr());
                }

                auto end = ast.get(items.at(items.size() - 1))->span;
                auto span = ast.get(items.at(0))->span.extend(end);
                child =
                    ast.new_node_with_children(NodeKind::ExprPack, span, items);
            }

            try(consume(TokenType::Rparen));
            return child;
        }

        if (match(TokenType::Dot)) {
            auto s = prev_span();
            auto t = peek();
            try(consume(TokenType::Id));

            return ast.new_node_with_str(NodeKind::EnumLit, s.extend(t.span),
                                         std::string{t.span.str(source)});
        }

        if (check(TokenType::Star) || check(TokenType::Lbracket))
            return parse_pointer_type_or_array();

        if (match(TokenType::Id)) {
            return ast.new_node_id(prev_span(),
                                   std::string{prev_span().str(source)});
        }

        if (match(TokenType::Str)) {
            auto s = prev_span().str(source);
            auto es = escape_string(s.substr(1, s.size() - 2));

            return ast.new_node_with_str(NodeKind::Str, prev_span(), es);
        }

        return parse_number();
    }

    // pointer_type ::= "[" [ "*" ] "]" [ "const" ] unary
    //                | "*" [ "const" ] unary
    //                ;
    //
    // array ::= "[" ( expr | "_" ) "]" expr "{" array_items "}" ;
    // NOLINTNEXTLINE(readability-function-cognitive-complexity)
    auto parse_pointer_type_or_array() -> NodeHandle {
        auto s = span();

        if (match(TokenType::Star)) {
            auto kind = NodeKind::Ptr;
            if (match_kw("const")) kind = NodeKind::PtrConst;

            auto inner = parse_unary();
            return ast.new_node_with_child(kind, s.extend(ast.get(inner)->span),
                                           inner);
        }

        if (check(TokenType::Lbracket) && check_next(TokenType::Star)) {
            try(consume(TokenType::Lbracket));
            try(consume(TokenType::Star));
            try(consume(TokenType::Rbracket));

            auto kind = NodeKind::MultiPtr;
            if (match_kw("const")) kind = NodeKind::MultiPtrConst;

            auto inner = parse_unary();
            return ast.new_node_with_child(kind, s.extend(ast.get(inner)->span),
                                           inner);
        }

        if (check(TokenType::Lbracket) && check_next(TokenType::Rbracket)) {
            try(consume(TokenType::Lbracket));
            try(consume(TokenType::Rbracket));

            auto kind = NodeKind::SlicePtr;
            if (match_kw("const")) kind = NodeKind::SlicePtrConst;

            auto inner = parse_unary();
            return ast.new_node_with_child(kind, s.extend(ast.get(inner)->span),
                                           inner);
        }

        try(consume(TokenType::Lbracket));

        if (match_kw("_")) {
            try(consume(TokenType::Rbracket));

            auto type = parse_expr();

            try(consume(TokenType::Lbrace));
            auto items = parse_array_items();
            try(consume(TokenType::Rbrace));

            return ast.new_node_array(
                NodeKind::ArrayAutoLen, s.extend(prev_span()),
                {.type = type, .size = {}, .items = items});
        }

        auto size = parse_expr();

        try(consume(TokenType::Rbracket));

        auto type = parse_expr();

        if (!check(TokenType::Lbrace)) {
            return ast.new_node_array(
                NodeKind::ArrayType, s.extend(prev_span()),
                {.type = type, .size = size, .items = {}});
        }

        try(consume(TokenType::Lbrace));
        auto items = parse_array_items();
        try(consume(TokenType::Rbrace));

        return ast.new_node_array(NodeKind::Array, s.extend(prev_span()),
                                  {.type = type, .size = size, .items = items});
    }

    // number ::= INT | HEX | OCT | BIN | FLOAT ;
    auto parse_number() -> NodeHandle {
        auto t = peek_and_advance();
        if (t.is_int()) {
            uint64_t value = 0xDEAD'BEEF;

            // FIXME: use something better than allocating a string for removing
            // a character
            std::string s{t.span.str(source)};
            if (s.contains('_')) {
                // NOLINTNEXTLINE(modernize-use-ranges)
                s.erase(std::remove(s.begin(), s.end(), '_'), s.end());
            }

            // NOTE: ignoring errors
            auto [ptr, ec] =
                std::from_chars(s.data(), s.data() + s.length(), value);
            if (ec != std::errc{}) {
                er->report_bug(t.span, "invalid integer (from_chars)");
            }

            return ast.new_node_with_int(NodeKind::Int, t.span, value);
        }

        if (t.is_hex()) {
            uint64_t value = 0xDEAD'BEEF;

            // FIXME: use something better than allocating a string for removing
            // a character
            std::string s{t.span.str(source)};
            if (s.contains('_')) {
                // NOLINTNEXTLINE(modernize-use-ranges)
                s.erase(std::remove(s.begin(), s.end(), '_'), s.end());
            }

            // remove the `0x` prefix
            s = s.substr(2);

            // NOTE: ignoring errors
            auto [ptr, ec] =
                std::from_chars(s.data(), s.data() + s.length(), value, 16);
            if (ec != std::errc{}) {
                er->report_bug(t.span,
                               "invalid hexadecimal integer (from_chars)");
            }

            return ast.new_node_with_int(NodeKind::Int, t.span, value);
        }

        er->report_error(t.span, "expected number, got {}", t.type);
        return ast.new_node_err(t.span);
    }

    auto parse_open_expr_pack() -> NodeHandle {
        std::vector<NodeHandle> items;

        do {
            items.push_back(parse_expr());
        } while (match(TokenType::Comma));

        // items can not be empty because of do-while
        auto end = ast.get(items.at(items.size() - 1))->span;
        auto span = ast.get(items.at(0))->span.extend(end);

        if (items.size() == 1) return items.at(0);

        return ast.new_node_with_children(NodeKind::ExprPack, span, items);
    }

    // ------------------------------------------------------------------------

    auto parse_func_args() -> std::vector<NodeHandle> {
        std::vector<NodeHandle> items;

        do {
            if (check(TokenType::Rparen)) break;

            if (!consume(TokenType::Id)) continue;
            auto s = prev_span();
            auto id = s.str(source);

            NodeHandle hdl;
            if (match(TokenType::Colon)) {
                hdl = parse_expr();
            } else {
                hdl = ast.new_node_nil(prev_span());
            }

            items.push_back(ast.new_node_named(NodeKind::FuncArg,
                                               s.extend(ast.get(hdl)->span),
                                               std::string{id}, hdl));
        } while (match(TokenType::Comma));

        return items;
    }

    auto parse_func_ret() -> NodeHandle {
        if (match(TokenType::Lparen)) {
            auto s = prev_span();

            std::vector<NodeHandle> children;
            do {
                children.push_back(parse_func_ret_part());
            } while (match(TokenType::Comma));

            try(consume(TokenType::Rparen));

            return ast.new_node_with_children(NodeKind::FuncRetPack,
                                              s.extend(prev_span()), children);
        }

        return parse_expr();
    }

    auto parse_func_ret_part() -> NodeHandle {
        if (check_next(TokenType::Colon)) {
            try(consume(TokenType::Id));
            auto name = prev_span();

            try(consume(TokenType::Colon));

            auto e = parse_expr();

            return ast.new_node_named(NodeKind::FuncArg,
                                      name.extend(ast.get(e)->span),
                                      std::string{name.str(source)}, e);
        }

        return parse_expr();
    }

    auto parse_call_args() -> std::vector<NodeHandle> {
        std::vector<NodeHandle> args;

        do {
            if (check(TokenType::Rparen)) break;

            args.push_back(parse_expr());
        } while (match(TokenType::Comma));

        return args;
    }

    auto parse_array_items() -> std::vector<NodeHandle> {
        std::vector<NodeHandle> items;

        do {
            if (check(TokenType::Rbrace)) break;

            items.push_back(parse_expr());
        } while (match(TokenType::Comma));

        return items;
    }

    // ------------------------------------------------------------------------

    static auto escape_string(std::string_view src) -> std::string {
        std::string out;
